# goit-pyweb-hw-13

hw_13/Django/: pyproject.toml
hw_13/Django/hw_10/hw_10/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
hw_13/Django/hw_10/quotes/: forms.py  models.py  urls.py  views.py
hw_13/Django/hw_10/quotes/migrations/: 0001_initial.py
hw_13/Django/hw_10/quotes/static/quotes/: style.css
hw_13/Django/hw_10/quotes/templates/quotes/: author.html  base.html  index.html  new_quote.html
hw_13/Django/hw_10/users/: forms.py  urls.py  views.py
hw_13/Django/hw_10/users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  signup.html
hw_13/Django/hw_10/utils/: add_quotes_to_mongo.py  authors.json  migration.py
hw_13/FastAPI/migrations/versions/: ef7b75e28ee6_init.py
hw_13/FastAPI/src/: schemas.py
hw_13/FastAPI/src/conf/: config.py
hw_13/FastAPI/src/repository/: contacts.py  users.py
hw_13/FastAPI/src/routes/: auth.py  users.py
hw_13/FastAPI/src/services/: auth.py
hw_14/FastAPI/: main.py  pyproject.toml
hw_14/FastAPI/migrations/versions/: 21e708d7fd0c_init.py  ba6588a5922b_init.py  da01433be02a_init.py
hw_14/FastAPI/src/database/: db.py  models.py
hw_14/FastAPI/src/routes/: contacts.py
hw_14/FastAPI/src/services/: email.py
