[tool.poetry]
name = "week-10"
version = "0.1.0"
description = ""
authors = ["KyryloDolia <fr1ghtn1ght2101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
psycopg2 = "^2.9.10"
pymongo = "^4.10.1"
django-environ = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
