[tool.poetry]
name = "web-week-12"
version = "0.1.0"
description = ""
authors = ["KyryloDolia <fr1ghtn1ght2101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.37"
psycopg2 = "^2.9.10"
python-multipart = "^0.0.20"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
alembic = "^1.14.1"
pydantic = {extras = ["email"], version = "^2.10.6"}
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
fastapi-mail = "^1.4.2"
pydantic-settings = "^2.7.1"
redis = "^5.2.1"
bcrypt = "<4.1.0"
fastapi-limiter = "^0.1.6"
cloudinary = "^1.42.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
